@@ -1,3 +1,14 @@
+2010-03-27  Grégoire Sutre  <gregoire.sutre@gmail.com>
+
+	Fix a build failure (-Wundef -Werror) when ENABLE_NLS is not defined,
+	which is the case with --disabled-nls.
+
+	* include/grub/i18n.h: Use (defined(ENABLE_NLS)
+	&& ENABLE_NLS) instead of ENABLE_NLS in all #if preprocessor macros.
+	* util/misc.c: Likewise.
+	* util/mkisofs/mkisofs.c: Likewise.
+	* util/mkisofs/mkisofs.h: Likewise.
+
 2010-03-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Simplify Apple CC support.
